# oil-gas-vlm

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-api.txt  requirements.txt
pipeline/: tasks.py  (+14 more)
多模态接口/: .gitignore  LICENSE  README.md  pyproject.toml
多模态接口/configs/: curve_aliases.yaml  default.yaml  field_aliases.yaml  prompt_templates.yaml
多模态接口/examples/: __init__.py  generate_sample_data.py  sample_config.yaml
多模态接口/examples/data/: SYNTHETIC_DATA_NOTICE.txt  demo_control_points.csv  demo_trajectory.csv  demo_well.csv  demo_well_location.csv
多模态接口/src/geo_adapter/: __init__.py  cli.py  errors.py  models.py  pipeline.py
多模态接口/src/geo_adapter/alignment/: __init__.py  classifier.py
多模态接口/src/geo_adapter/coordinates/: __init__.py  crs.py
多模态接口/src/geo_adapter/depth/: __init__.py  minimum_curvature.py  references.py
多模态接口/src/geo_adapter/packaging/: __init__.py  files.py  prompt_builder.py  request_builder.py
多模态接口/src/geo_adapter/preprocess/: __init__.py  missing_data.py  normalization.py
多模态接口/src/geo_adapter/qc/: __init__.py  validators.py
多模态接口/src/geo_adapter/readers/: __init__.py  seismic.py  structured.py  time_depth.py  trajectory.py  well_location.py  well_log.py
多模态接口/src/geo_adapter/resources/: curve_aliases.yaml  prompt_templates.yaml
多模态接口/tests/: conftest.py  test_alignment_levels.py  test_curve_mapping.py  test_depth_trajectory_crs.py  test_end_to_end.py  test_missing_data.py  test_prompt_builder.py  test_real_dataset_smoke.py  test_seismic.py  test_sonic_integration.py  test_structured_inputs.py  test_units.py
(+106 files in other folders)
